# website

./: .gitignore  .travis.yml  CNAME  LICENSE  README.md  default.nix  index.html  install.md  lectures.md  stack.yaml  website.cabal
.circleci/: config.yml
.github/workflows/: haskell.yml
lectures/: 01-intro.lhs  02-ADTs.lhs  03-rec-poly.lhs  04-higher-order.lhs  05-type-classes.lhs  06-laziness.lhs  08-IO.lhs  09-functors.lhs  10-applicative.lhs  11-applicative2.lhs  12-monads.lhs  lectures.md
provider/: CNAME  index.html  install.md
provider/lectures/: 01-intro.lhs  02-ADTs.lhs  03-rec-poly.lhs  07-folds-monoids.lhs  08-IO.lhs  09-functors.lhs
provider/static/css/: default.css
provider/templates/: base.html
src/: Site.hs  Site.hs~
static/css/: default.css
templates/: base.html  body.html  post-list.html  post.html
