name: website
version: 0.0.0.0
synopsis: Haskell Indonesia
description: Haskell Indonesia
homepage: 
license: BSD3
author: kusut
maintainer: kusut
copyright: 2014
build-type: Simple
cabal-version: >=1.8

executable site
  hs-source-dirs: src
  main-is: Site.hs
  ghc-options: -rtsopts -threaded -Wall
  build-depends: base == 4.8.0.0
               , hakyll == 4.6.9.0
               , highlighting-kate == 0.5.15
